--- a/major_project_report/main.tex
+++ b/major_project_report/main.tex
@@ -11,7 +11,8 @@
 \pagenumbering{roman} % roman page numbers
 
 \input{sec/titlepage}
-
+\input{sec/letter_of_approval}
+\input{sec/copyright}
 \input{sec/acknowledgment}
 \input{sec/abstract}
 
@@ -45,6 +46,7 @@
 \input{sec/system_implementation}
 \input{sec/tools_technologies}
 \input{sec/result}
+\input{sec/limitations}
 \input{sec/conclusion}
 
 \input{sec/references}
