--- a/major_project_report/sec/acknowledgment.tex
+++ b/major_project_report/sec/acknowledgment.tex
@@ -14,6 +14,6 @@ Any kind of suggestion or criticism will be highly appreciated and acknowledged.
 \vskip 10mm
 {\bf Authors:}
 \newline Abhishek Paudel
-\newline Brihat Raj Bajracharya
+\newline Brihat Ratna Bajracharya
 \newline Miran Ghimire
 \newline Nabin Bhattarai
