--- a/major_project_report/sec/list_of_abbrev.tex
+++ b/major_project_report/sec/list_of_abbrev.tex
@@ -1,5 +1,6 @@
-LIST OF ABBREVIATIONS
 
+\newpage
+\section*{LIST OF ABBREVIATIONS}
 
 API		Application Package Interface
 CBF		Content Based Filtering
@@ -8,10 +9,8 @@ CSS		Cascading Style Sheet
 DFD		Data Flow Diagram
 ERD		Entity Relationship Diagram
 HTML	Hyper Text Markup Language
-IDF		Inverse Document Frequency
 IR		Information Retrieval
 JS		JavaScript
-KNN		K-Nearest Neighbor
 ML		Machine Learning
 MVT		Model-View-Template
 NLP		Natural Language Processing
@@ -19,7 +18,5 @@ NLTK	Natural Language ToolKit
 ORDBMS	Object-Relational Database Management System
 PBMRS	Personality Based Music Recommendation System
 PoS		Part of Speech
-SVM		Support Vector Machine
-TF		Term Frequency
 UI		User Interface
-UI/UX	User Interface/User eXperience
+
