--- a/major_project_report/sec/result.tex
+++ b/major_project_report/sec/result.tex
@@ -175,6 +175,17 @@ The followings tables show the confusion matrix of Naive Bayes for Big Five Pers
 
 
 \subsection{Evaluation of Recommendation System}
+RMSE of global baseline algorithm: \\
+RMSE of user to user collaborative filtering with user rating matrix: \\
+RMSE of user to user collaborative filtering with user personality matrix: \\
+RMSE of user to user collaborative filtering with user rating matrix with combination of global baseline: \\
+RMSE of user to user collaborative filtering with user personality matrix with combination of global baseline: \\
+RMSE of user to user collaborative filtering with weighted average of user personality matrix and user rating matrix:\\
+RMSE of user to user collaborative filtering with weighted average of user personality matrix and user rating matrix with combination of global baseline: \\
+RMSE of matrix factorization: \\
+
+
+
 \subsubsection{Latent Factor}
 The following figure shows the RMSE of matrix factorization when number of iterations is varied:
 \begin{figure}[!ht]
