titlepage and screenshot added

--- a/major_project_report/sec/titlepage.tex
+++ b/major_project_report/sec/titlepage.tex
@@ -1,6 +1,51 @@
 
 % Title page (Design in your own way)
 
-\maketitle
 \addcontentsline{toc}{section}{Title Page}
 \thispagestyle{empty} % This will hide pagenumber in title page
+
+
+% Title page (Design in your own way)
+
+{
+  \thispagestyle{empty}
+  \centering
+  \normalsize
+
+  \includegraphics[height=1.6in]{fig/tu-logo}\\
+  {\Large\sc Tribhuvan University}\\
+  {\Large\sc Institute of Engineering}\\
+  Central Campus, Pulchowk
+  \\[1.5cm]
+
+  A MAJOR PROJECT REPORT ON\\
+  {\Huge\sc Personality Based \\[5pt] Music Recommendation System}\\[1cm]
+
+  By:\\
+  {\bf Abhishek Paudel} (070/BCT/502)\\
+  {\bf Brihat Ratna Bajracharya} (070/BCT/13)\\
+  {\bf Miran Ghimire} (070/BCT/521)\\
+	{\bf Nabin Bhattarai} (070/BCT/522)\\
+
+  ~
+
+  A PROJECT WAS SUBMITTED TO THE DEPARTMENT OF ELECTRONICS AND COMPUTER
+  ENGINEERING IN PARTIAL FULFILLMENT OF THE REQUIREMENT FOR THE BACHELOR'S
+  DEGREE IN ELECTRONICS \& COMMUNICATION / COMPUTER ENGINEERING
+
+  ~
+
+  DEPARTMENT OF ELECTRONICS AND COMPUTER ENGINEERING\\
+  LALITPUR, NEPAL
+
+  \vfill
+  \large
+	\today
+  %%July, 2017
+
+}
+
+%%% Local Variables:
+%%% mode: plain-tex
+%%% TeX-master: t
+%%% End:
