--- a/major_project_report/main.tex
+++ b/major_project_report/main.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper,12pt,onepage]{article}
 \usepackage{report}
 \usepackage[acronym]{glossaries}
+\usepackage{rotating}
 \title{Major Project Report}
 \author{Miran Ghimire}
 \date{\today}
@@ -48,5 +49,6 @@
 \input{sec/conclusion}
 
 \input{sec/references}
+\input{sec/appendix}
 
 \end{document}
